[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/interactables/Interactable.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/interactables/Plot.gd" type="Script" id=2]
[ext_resource path="res://dat/fx/PlantFX_Pass.tres" type="QuadMesh" id=3]
[ext_resource path="res://dat/fx/Source Files/collect01.png" type="Texture" id=4]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.5, 1 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0.488764, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.5
spread = 180.0
initial_velocity = 8.0
initial_velocity_random = 0.75
scale_curve = SubResource( 13 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=10]
material = SubResource( 9 )
size = Vector2( 0.25, 0.25 )

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("CropPoint:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CropPoint:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CropPoint:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CropPoint:rotation_degrees:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CropPoint:rotation_degrees:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CropPoint:rotation_degrees:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
resource_name = "spin_crop"
length = 1.5
loop = true
step = 0.375
tracks/0/type = "bezier"
tracks/0/path = NodePath("CropPoint:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.75, 1.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CropPoint:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.1, 0, 0.1, 0, 360, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 1.5 )
}

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.5, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.25
direction = Vector3( 0, 1, 0 )
spread = 15.0
initial_velocity = 8.0
initial_velocity_random = 0.25
scale_curve = SubResource( 8 )

[node name="Plot" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 2 )
_one_shot = true
_crosshair = "plant"
_crop = null

[node name="CollisionShape" parent="." index="0"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="." index="1"]
one_shot = true

[node name="MeshInstance" type="MeshInstance" parent="." index="2"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CropPoint" type="Position3D" parent="." index="3"]

[node name="CollectEffects" type="Particles" parent="CropPoint" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
emitting = false
amount = 16
lifetime = 0.75
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 15 )
anims/spin_crop = SubResource( 14 )

[node name="PlantEffects" type="Particles" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
visibility_aabb = AABB( -1, -1, -1, 2, 2, 2 )
process_material = SubResource( 6 )
draw_pass_1 = ExtResource( 3 )
